Cleaning after logout, added meta tag for a better mobile experience.

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,10 @@
 <html ng-app="prepaidFa" ng-strict-di>
   <head>
     <meta charset="utf-8">
-    <title>Prepaid Fare App |</title>
-    <meta name="description" content="">
+    <title>Prepaid Fare App</title>
+    <meta name="description" content="Another app">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
